css/main.css
body, html {
	margin:0;
	padding:0;
	font-family:Arial, Helvetica, sans-serif;
	font-size:12px;
	height: 100%;
	
}
a {color:#db0f00}
a:hover {color:#666;}
a img, img {border:none;}
:focus {outline:none;}
#push_wrapper {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	margin: 0 auto -80px;
}
#content_wrap, 
#home_slider_wrap,  
#contact_wrap, 
#footer_wrap, 
#tab_slider_wrap,
#video_wrapper,
#about_wrap {
	position:relative;
	width:952px;
	margin:0 auto;
}
#tab_slider_wrap {
	position:relative;
	width:986px;
	height:397px;
	margin-bottom:0px;
}

/*=========== START INDEX NEW ===========*/
#splash-top {
	/*min-height: 100vh;*/
	background: url("../elements/general_build/main_image.jpg") no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
	background-color: #222;
    padding-top: 152px;
    padding-bottom: 120px;
    text-align: center;
}

.banner-top{
	margin-top: 100px;
    text-align: center; 	
}

.genasys-splash-logo{
	margin: auto;
}

.splash-text {
	color: #A3A3A5;
	max-width: 620px;
	margin: auto;
	padding-top: 50px;
	padding-bottom: 50px;
}

.splash-row {
	max-width: 620px;
	margin: auto;
	padding-top: 30px;
	color: white;

}

.splash-submit{
	background-color: #829DB2 !important;
	border: 1px solid #829DB2 !important;
    border-radius: 2px !important;
 	width: 80%;
 	color: black !important;
}

#stats-section {
	background-color: #445565;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

.stats-box-outer {
	height: 250px;
	/*padding: 20px;*/
	margin-bottom: 40px;
	padding: 35px 0px 0px 0px;
}

.stats-box-inner:hover {
	cursor: pointer;
	-webkit-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	-moz-box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	box-shadow: 2px 2px 7px 0px rgba(0,0,0,0.5);
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.6);
	transform: scale(1.05);
    -webkit-transition: 0.2s;
    -moz-transition: 0.2s;
    -o-transition: 0.2s;
    transition: 0.2s;
}

.stats-box-outer p{
	color: white;
	margin: 0px;

}

.stats-box-inner {
	padding-top: 15px;
	max-width: 250px;
	margin: auto;
	border: 1px solid white;
	height: 100%;
}

.box1-count{
	margin: 0 0 10px !important;
	font-size: 60px;
	vertical-align: center;
	text-align: center;
	line-height: 0px !important;
	color:white;
}

.box2-sm{
	line-height: 35px;	
	font-size: 26px;
	color:#ccc !important;
}

.box2-md{
	line-height: 35px;
	font-size: 30px;
	color:white !important;	
}

.box4-count {
	font-size: 50px;
	padding-top: 35px;
}

.box4-sub {
	font-size: 36px;
    margin-left: -20px !important;
    font-weight: 200;
    line-height: 10px;
}
 
.stats-subheading {
	padding: 15px;
}

.users-icon {
	line-height: 110px !important;
	color:white;
}

#chart1-section {
	background-color: #BD2228;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

#chart1 {
	height: 600px;
	width: auto;
}

#timeline {
	background-color: #fff;
    padding-top: 80px;
    text-align: center;

}

#chart2-section {
	background-color: #445565;
    padding-top: 80px;
    padding-bottom: 250px;
    text-align: center;
    color: white;

}

#chart2 {
	height: 600px;
	width: auto;
}
/*=========== END INDEX NEW ============*/

/*=========== START NEW FOOTER ===========*/
#footer-new {
	width: 100%;
	position:relative;
	/*	margin:0 auto;*/
	min-height: 300px;
	background-color: #3D3D3D;
	/*text-align: center;*/
	color: white;
	padding-top: 30px;
	padding-bottom: 30px;
	/*margin-top: 30px;*/
}

#footer-new h4 {
	font-size: 15px;
}

#footer-new li{
	font-weight: 200px;
	list-style: none;
	font-size: 12px;
	padding-top: 7px;
	padding-bottom: 5px;
}

#footer-new a{
	text-decoration: none;
	color: white;
}


 #footer-new a:hover, a:visited{
	text-decoration: none;
	color: white;
	cursor: pointer;

 }

 .text-field-white {
 	margin: 5px 0px 0px 0px !important;
 	border: 1px solid white;
    border-radius: 2px;
    padding: 5px 5px 6px 15px;
    width: 100%;
    background-color: rgba(0,0,0,0);
 }

 #footer-new button,  #footer-new button:hover,  #footer-new button:active{
 	border: 1px solid white;
    border-radius: 2px;
 	padding: 6px;
 	margin: 15px 0px 5px 0px;
 	width: 100%;
 	color: black;
 	background-color: white;
 	font-size: 12px;
 	font-weight: 500;
 }

 .footer-col {
 	min-height: 270px;
 	margin-bottom: 30px;
 }

 .text-field-white ::-webkit-input-placeholder {
 	font-size: 11px;
   color: white;
 }

 .text-field-white :-moz-placeholder {
 	font-size: 11px;
   color: white;
 }

 .text-field-white ::-moz-placeholder {
 	font-size: 11px;
   color: white;
 }

 .text-field-white :-ms-input-placeholder {
 	font-size: 11px;
   color: white;
 }



 #copyright-footer {
 	padding-top: 20px;
  	height: 65px;
	width: 100%;
	position:relative;
 	color: white;
 	background-color: #222;

 }

 #copyright-footer a{
 	color: white;
 }

 #copyright-footer a:hover, a:active{
 	color: #EE1E2B;

 }

 .social-icons-footer {
 	padding-left: 5px;

 }

/*=========== END NEW FOOTER ===========*/


/*======HEADER=====*/
#head_container {
	height:136px;
	background: #f4f4f4 url(../elements/general_build/shadow_tile_top.jpg) bottom repeat-x;
	margin-top:-60px;
}
#head_wrap {
	position:relative;
	width:952px;
	height:127px;
	margin:auto;
}
#logo {
	float:left;
	width:293px;
	height:127px;
	margin-left:-109px;
	margin-top:-77px;
}
#slogan {
	position:absolute;
	width: 760px;
	height:30px;
	top:90px;
	left:187px;
}
/*======TOP NAV=====*/
#nav_left_push {
	float:left;
	width:50%;
	height:77px;
	vertical-align:top;
}
#nav_right_bgtile {
	position:relative;
	float:right;
	width:50%;
	height:77px;
	background: url(../elements/general_build/nav_tile.jpg) top repeat-x;
	vertical-align:top;
}
#nav_wrap {
	position:relative;
	float:left;
	width:665px;
	height:77px;
	margin-top:-77px;
	background: url(../elements/general_build/nav_tile.jpg) top repeat-x;
	vertical-align:top;
}
/* ... */

